<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiveSpeaker</string>
    <string name="btn_start">开始录音</string>
    <string name="btn_stop">停止录音</string>
    <string name="label_no_permission">需要录音权限</string>
</resources>
